spade-tests/src/snapshots/spade_tests__typeinference__transmute_from_inv_wire_container_is_disallowed.snap
---
source: spade-tests/src/typeinference.rs
---
struct port Container {
    m: inv &bool,
    r: &bool
}

fn test(a: Container) -> bool {
    unsafe { std::conv::transmute(a) }
}


error: Attempting to transmute from type containing inv & value
  ┌─ testinput:7:35
  │
7 │     unsafe { std::conv::transmute(a) }
  │                                   ^ struct port Container {m: inv &bool, r: &bool} has an inv & wire
